more ui improvements

--- a/index.html
+++ b/index.html
@@ -140,9 +140,11 @@
     /* max-width: 500px; */
     width: 100%;
     text-align: center;
-    border-radius: 5px;
+    border-radius: 15px;
     margin: auto;
-    /* background-color:gray; */
+    background-color: white;
+    /* outline-style: outset; */
+    /* text-shadow: 2px 2px white; */
   }
 
   .prediction_box{
@@ -154,7 +156,7 @@
     text-align: center;
     margin: auto;
     border-radius: 15px;
-    /* background-color:greenyellow; */
+    background-color: #b4b4b4;
   }
 
   .original_image_box{
@@ -169,10 +171,12 @@
 
   .container-fluid{
     border-style: solid;
-    width: 32%;
+    /* width: 32%; */
+    width: 28em;
     border-radius: 15px;
     margin-top: 1%;
     border-width: 3px;
+    background-color: lightgrey;
   }
 
   .bullet_point_text{
@@ -180,13 +184,14 @@
   }
 
   .title_text{
-    /* text-align: center;  */
+    text-align: center; 
     /* margin-top: 0.3%;  */
     margin: auto;
     font-weight: bold;
     border-bottom-style: dotted;
     width: 100%;
     border-width: 3px;
+    font-size: 1.8em;
     /* background-color: grey; */
   }
 
