--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
     border-radius: 15px;
     margin: auto;
     background-color: white;
+    font-weight: bold;
     /* outline-style: outset; */
     /* text-shadow: 2px 2px white; */
   }
@@ -157,6 +158,8 @@
     margin: auto;
     border-radius: 15px;
     background-color: #b4b4b4;
+    font-weight: bold;
+    /* text-shadow: 1.5px 1px white; */
   }
 
   .original_image_box{
