--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <br>
 
     <div class="original_image_box" id="camera_div">
-      <img style="border-radius: 15px;" id="original-image" src="two.jpg" width="100%" height="100%"/>
+      <img style="border-radius: 15px;" id="original-image" src="four.jpg" width="100%" height="100%"/>
     </div>
     <div style="text-align: center; font-style: italic; font-size: 12px; padding-top: 2px;">
       <input type="checkbox" id="use_camera" name="use_camera" value="true"> Use Camera
@@ -236,7 +236,7 @@
     <br>
 
     <div class="prediction_box">
-      Prediction: <div id="prediction-element" class="prediction_text">2</div>
+      Prediction: <div id="prediction-element" class="prediction_text">?</div>
     </div>
 
     <div>
